# amake

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  editor.rs  error.rs  main.rs  render.rs  report.rs  runner.rs  sandbox.rs  template.rs
src/adapter/: aider.rs  claude_code.rs  copilot.rs  generic.rs  mod.rs  sandbox.rs
tests/: cli.rs
