[package]
name = "amake"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
termimad = "0.34"
toml = "1.1"
thiserror = "2"
wait-timeout = "0.2"
libc = "0.2.186"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
